# game-prototype

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  GamePrototypeConfig.h.in  README.md  config.h.in  dockerfile  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
sandbox/: README.md  SampleMath.h
scripts/: build.bat
scriptts/: build.bat  build.sh
shaders/triangle/: TriangleFragment.glsl  TriangleVertex.glsl
src/: Actor.cpp  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  Main.cpp  main.cpp
src/components/: TransformComponent.h
src/engine/: CMakeLists.txt
src/engine/actor/: actor.h
src/engine/components/: Component.h  TransformComponent.cpp
src/engine/core/: CmakeLists.txt  window.cpp  window.h
src/engine/renderer/: CMakeLists.txt  Renderer.h
src/engine/renderer/shader/: CMakeLists.txt  Mesh.cpp  Shader.h  ShaderManager.h
src/engine/shader/: CMakeLists.txt  Mesh.cpp  Mesh.h  Shader.cpp
src/engine/utils/: assertion.h  fileSystem.h  logFileManager.cpp  logFileManager.h  logger.cpp  logger.h
src/game/: CMakeLists.txt  game.cpp  game.h
src/sample/: SampleMath.cpp
tests/: CMakeLists.txt  TestMain.cpp  Test_Math.cpp
tests/sandbox/: Test_Math.cpp  Test_hoge.cpp
